[gd_scene load_steps=4 format=2]

[ext_resource path="res://animated_platforms/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.17
height = 0.25

[sub_resource type="CapsuleShape" id=2]
radius = 0.17
height = 0.11

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00314447, 0 )
script = ExtResource( 1 )

[node name="CollisionStanding" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.291865, 0 )
shape = SubResource( 1 )

[node name="CollisionDucking" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.222021, 0 )
shape = SubResource( 2 )
disabled = true

[node name="CameraRotation" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.416845, 0 )

[node name="Camera" type="Camera" parent="CameraRotation"]
